reference/scripts/_batch_win.log
  File "C:\Users\micha\work\recov\reference\scripts\_batch_win.ps1", line 1
    $ErrorActionPreference = 'Continue'
    ^
SyntaxError: invalid syntax
